fix: скорректировать row-gap у cards на max-width 767px

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -8,5 +8,6 @@
 @media (max-width: 767px) {
   .cards {
     padding-top: 36px;
+    row-gap: 19px;
   }
 }
